# LegalCrime

./: .gitignore  MenuTest.sln
MenuTest/: .gitignore  App_FpsController.hpp  App_Music.cpp  App_Music.hpp  App_Renderer.cpp  App_Renderer.hpp  App_Window.cpp  App_Window.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Logger.cpp  Logger.hpp  MenuTest.vcxproj  MenuTest.vcxproj.filters  README.md  Renderer.cpp  Sound.cpp  Sound.hpp  StringsHelper.cpp  StringsHelper.hpp  TESTING.md  build.sh  config.ini  main.cpp  run_tests.sh  update_project.ps1  vcpkg.json  verify_build.ps1
MenuTest/Debug/: vc143.idb
MenuTest/Debug/MenuTest.tlog/: CL.command.1.tlog  MenuTest.lastbuildstate
MenuTest/Engine/: README.md
MenuTest/Engine/Audio/: AudioEngine.cpp  AudioEngine.h  AudioResultTests.cpp  IAudioEngine.h  IAudioEngineTests.cpp  IMusicPlayer.h  ISoundPlayer.h  MusicPlayer.cpp  MusicPlayer.h  SoundEffect.cpp  SoundEffect.h
MenuTest/Engine/Camera/: Camera2D.cpp  Camera2D.h
MenuTest/Engine/Core/: Application.cpp  Application.h  ApplicationFixedStepTests.cpp  ConfigLoader.cpp  ConfigLoader.h  ConfigLoaderTests.cpp  Constants.h  EngineBuilder.cpp  EngineBuilder.h  EventBus.h  EventBusTests.cpp  Events.h  FileSystem.cpp  FileSystem.h  FileSystemTests.cpp  ObjectPool.h  ObjectPoolTests.cpp  TilePositionTests.cpp  Types.h
MenuTest/Engine/Core/Logger/: ILogger.h  Logger.cpp  Logger.h
MenuTest/Engine/ECS/: ComponentStorage.h  ECSTests.cpp  EntityManager.h  System.h
MenuTest/Engine/Entity/: Entity.cpp  Entity.h  EntityTests.cpp  Transform.h
MenuTest/Engine/Graphics/: AnimatedSprite.cpp  AnimatedSprite.h  AnimatedSpriteTests.cpp  CHARACTER_SPRITE_SYSTEM.md  CharacterSprite.cpp  CharacterSprite.h  CharacterSpriteConfig.h  CharacterSpriteLoader.cpp  CharacterSpriteLoader.h  SmoothMovementTests.cpp  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
MenuTest/Engine/Input/: GamepadTests.cpp  InputAction.cpp  InputAction.h  InputActionTests.cpp  InputAxis.cpp  InputAxis.h  InputManager.cpp  InputManager.h  InputTypes.h
MenuTest/Engine/Platform/: IWindow.h  Window.cpp  Window.h  WindowConfigTests.cpp
MenuTest/Engine/Renderer/: IRenderer.h  IRendererTests.cpp  Renderer.cpp  Renderer.h  ShapeCache.h  ShapeCacheTests.cpp  SpriteBatch.cpp  SpriteBatch.h
MenuTest/Engine/Resources/: AudioManager.cpp  AudioManager.h  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceManagerTests.cpp  TextureManager.cpp  TextureManager.h
MenuTest/Engine/Scene/: IScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneManagerTests.cpp  SceneTests.cpp
MenuTest/Engine/UI/: Button.cpp  Button.h  ButtonTests.cpp  Minimap.cpp  Minimap.h
MenuTest/Engine/World/: FogOfWarRenderer.cpp  FogOfWarRenderer.h  IsometricMath.h  Pathfinding.cpp  Pathfinding.h  PathfindingBenchmark.cpp  PathfindingTests.cpp  README.md  SpatialGrid.cpp  SpatialGrid.h  SpatialGridTests.cpp  TileMap.cpp  TileMap.h  TileMapRenderer.cpp  TileMapRenderer.h  TileMapTests.cpp
MenuTest/Game/: CharacterConfigs.h  Events.h  GameConstants.h  GameConstantsTests.cpp  GameStateMachine.cpp  GameStateMachine.h  GameStateMachineTests.cpp  LegalCrimeApp.cpp  LegalCrimeApp.h  README.md
MenuTest/Game/Entities/: Character.cpp  Character.h  CharacterData.h  CharacterDataTests.cpp  CharacterFactory.cpp  CharacterFactory.h
MenuTest/Game/Input/: GameInputBindings.h
MenuTest/Game/Resources/: GameResourceLoader.cpp  GameResourceLoader.h  GameResources.cpp  GameResources.h  ResourcePaths.h
MenuTest/Game/Scenes/: GameplayInputHandler.cpp  GameplayInputHandler.h  GameplayRenderer.cpp  GameplayRenderer.h  GameplayScene.cpp  GameplayScene.h  GameplaySceneRefactorTests.cpp  MainMenuLayoutTests.cpp  MainMenuScene.cpp  MainMenuScene.h
MenuTest/Game/Simulation/: GameSimulation.cpp  GameSimulation.h  GameSimulationTests.cpp
MenuTest/Game/World/: World.cpp  World.h  WorldBenchmark.cpp  WorldTests.cpp
MenuTest/Game/World/Commands/: AttackCommand.h  Command.h  CommandTests.cpp  MoveCommand.h
MenuTest/Game/World/Systems/: CommandSystem.cpp  CommandSystem.h  CommandSystemTests.cpp  MovementSystem.cpp  MovementSystem.h  MovementSystemTests.cpp  SelectionBenchmark.cpp  SelectionSystem.cpp  SelectionSystem.h  SelectionSystemTests.cpp  SteeringSystem.cpp  SteeringSystem.h  VisionSystem.cpp  VisionSystem.h  VisionSystemTests.cpp
MenuTest/Tests/: README.md  SimpleTest.h  run_tests.bat  run_tests_simple.ps1  test_main.cpp
MenuTest/src/: Button.hpp  Game.cpp  Game.hpp  Gameplay.hpp  Map.hpp  Menu.hpp  Sprite.hpp  Texture.hpp
MenuTest/src/helpers/: OsHelper.hpp  StringsHelper.hpp
MenuTest/src/logger/: Logger.cpp  Logger.hpp
